<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:theme="@style/editText_style">

        <TextView
            android:id="@+id/login_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/titleTextSize" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:layout_marginTop="@dimen/marginLarge"
            app:layout_constraintTop_toBottomOf="@id/login_type_tv"
            app:layout_constraintBottom_toTopOf="@id/login_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_username_input"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            app:layout_constraintTop_toBottomOf="@id/login_username"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password_input"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_as_supervisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_as_supervisor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            android:layout_marginEnd="@dimen/margin"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_as_supervisor"
            android:layout_marginTop="@dimen/marginLarge"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorwhite"
            android:id="@+id/login_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>