<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/editText_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin">

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username_label"
        android:textSize="@dimen/titleTextSizeSmall"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emaillayout">

        <Button
            android:id="@+id/update_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_tv" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintEnd_toStartOf="@id/update_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_tv" />

        <TextView
            android:id="@+id/password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLarge"
            android:text="@string/email_label"
            android:textSize="@dimen/titleTextSizeSmall"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/monthly_limit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        app:layout_constraintTop_toBottomOf="@id/password_layout">

        <Button
            android:id="@+id/save_monthly_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthly_limit_tv" />

        <EditText
            android:id="@+id/monthly_limit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@id/save_monthly_limit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthly_limit_tv" />

        <TextView
            android:id="@+id/monthly_limit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_limit"
            android:textSize="@dimen/titleTextSizeSmall"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username">

        <Button
            android:id="@+id/update_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_tv" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintEnd_toStartOf="@id/update_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_tv" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLarge"
            android:text="@string/email_label"
            android:textSize="@dimen/titleTextSizeSmall"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titleTextSizeSmall"
        android:text="@string/delete_account"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/monthly_limit_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>